--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,10 @@
       if (xhr.readyState == 4 && xhr.status == 200) {
         if (xhr.response[0] != document.getElementById("current-patch").textContent)
           location.reload(true);
-      } else {
-        console.log(`Error: ${xhr.status}`);
       }
+      // else {
+      //   console.log(`Error: ${xhr.status}`);
+      // }
     };
 
   }
